[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/images/green_light.png" type="Texture" id=1]
[ext_resource path="res://assets/images/exit-hover.png" type="Texture" id=2]
[ext_resource path="res://assets/images/balance-white.png" type="Texture" id=3]
[ext_resource path="res://assets/font/font.tres" type="DynamicFont" id=4]
[ext_resource path="res://status_bar/StatusBar.gd" type="Script" id=5]
[ext_resource path="res://assets/images/settings-hover.png" type="Texture" id=6]
[ext_resource path="res://assets/images/exit.png" type="Texture" id=7]

[sub_resource type="StreamTexture" id=1]
flags = 4
load_path = "res://.import/settings.png-56fcbab19c17f8b56002bc8e3ce43bfa.stex"

[node name="StatusBar" type="Control"]
anchor_right = 1.0
rect_min_size = Vector2( 1000, 100 )
mouse_filter = 2
script = ExtResource( 5 )

[node name="QuitBtn" type="TextureButton" parent="."]
margin_right = 110.0
margin_bottom = 100.0
rect_min_size = Vector2( 110, 100 )
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 7 )
texture_hover = ExtResource( 2 )
expand = true
stretch_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -950.0
margin_bottom = 150.0
rect_min_size = Vector2( 800, 125 )

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 950.0
margin_bottom = 150.0
grow_horizontal = 0
rect_min_size = Vector2( 950, 125 )
custom_constants/separation = 15
alignment = 2

[node name="BalanceTexture" type="TextureRect" parent="VBoxContainer/HBoxContainer"]
margin_left = 105.0
margin_right = 405.0
margin_bottom = 150.0
rect_min_size = Vector2( 300, 100 )
texture = ExtResource( 3 )
expand = true
stretch_mode = 7

[node name="BalanceLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_left = 420.0
margin_top = 45.0
margin_right = 720.0
margin_bottom = 105.0
grow_horizontal = 2
rect_min_size = Vector2( 300, 60 )
mouse_filter = 1
mouse_default_cursor_shape = 2
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 4 )
text = "-,---"
valign = 2

[node name="SettingsButton" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
margin_left = 735.0
margin_right = 845.0
margin_bottom = 150.0
rect_min_size = Vector2( 110, 75 )
mouse_default_cursor_shape = 2
texture_normal = SubResource( 1 )
texture_hover = ExtResource( 6 )
expand = true
stretch_mode = 5

[node name="Spacer" type="CenterContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 860.0
margin_right = 950.0
margin_bottom = 150.0
rect_min_size = Vector2( 90, 150 )

[node name="SyncTexture" type="TextureRect" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -115.0
margin_bottom = 75.0
rect_min_size = Vector2( 115, 75 )
texture = ExtResource( 1 )
expand = true
stretch_mode = 6

[node name="Timer" type="Timer" parent="."]
wait_time = 60.0
autostart = true

[connection signal="pressed" from="QuitBtn" to="." method="_on_QuitBtn_pressed"]
[connection signal="gui_input" from="VBoxContainer/HBoxContainer/BalanceLabel" to="." method="_on_BalanceLabel_gui_input"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="timeout" from="Timer" to="." method="getData"]
